--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "bluebird": "~2.3.4",
     "dot-object": "~0.3.0",
     "lodash": "~2.4.1",
+    "sjcl": "git+https://github.com/stellar/sjcl.git",
+    "sjcl-crypt": "git+https://github.com/stellar/sjcl-scrypt.git",
     "superagent": "~0.18.2",
     "tweetnacl": "git+https://github.com/stellar/tweetnacl-js.git"
   },
