--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "camel-case": "~1.0.2",
     "lodash": "~2.4.1",
     "sjcl": "git+https://github.com/stellar/sjcl.git",
-    "sjcl-crypt": "git+https://github.com/stellar/sjcl-scrypt.git",
-    "superagent": "~0.18.2",
-    "tweetnacl": "git+https://github.com/stellar/tweetnacl-js.git"
+    "sjcl-scrypt": "git+https://github.com/stellar/sjcl-scrypt.git",
+    "superagent": "~0.20.0",
+    "thirty-two": "~0.0.2",
+    "tweetnacl": "^0.11.2"
   },
   "devDependencies": {
     "chai": "~1.9.0",
