--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ services:
 before_install:
   - npm install -g gulp forever
 before_script:
-  - cd node_modules/stellar-wallet && gulp db:setup
+  - cd node_modules/stellar-wallet && NODE_ENV=test gulp db:setup
   - forever start ./node_modules/stex/bin/stex www
