--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,9 @@ before_install:
   - npm install -g forever
 before_script:
   - git clone https://github.com/stellar/stellar-wallet.git
-  - cd stellar-wallet && git checkout v2 && npm install && NODE_ENV=test gulp db:setup && forever start ./node_modules/stex/bin/stex www
+  - cd stellar-wallet
+  - git checkout v2
+  - npm install
+  - NODE_ENV=test gulp db:setup
+  - forever start ./node_modules/stex/bin/stex www
+  - cd ..
