--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "mocha --recursive --bail"
+    "test": "mocha --recursive --bail --reporter spec"
   },
   "repository": {
     "type" : "git",
