--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
   },
   "devDependencies": {
     "chai": "~1.9.0",
+    "chai-as-promised": "~4.1.1",
     "gulp": "~3.6.0",
     "gulp-rimraf": "~0.1.0",
     "gulp-load-plugins": "~0.5.0",
     "gulp-rename": "~1.2.0",
     "gulp-uglify": "~0.3.1",
     "gulp-webpack": "~0.4.1",
+    "istanbul": "~0.3.2",
     "mocha": "~1.17.1",
     "notp": "^2.0.2",
+    "opn": "~1.0.0",
     "run-sequence": "~0.3.6",
     "webpack": "~1.4.4"
   },
@@ -32,7 +35,8 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "mocha --recursive --bail --reporter spec"
+    "test": "mocha --recursive --bail --reporter spec",
+    "coverage": "istanbul cover ./node_modules/mocha/bin/_mocha -- --recursive --bail --reporter spec && opn coverage/lcov-report/index.html"
   },
   "repository": {
     "type" : "git",
