--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chai": "~1.9.0",
     "chai-as-promised": "~4.1.1",
     "gulp": "~3.6.0",
+    "gulp-coveralls": "^0.1.3",
     "gulp-rimraf": "~0.1.0",
     "gulp-load-plugins": "~0.5.0",
     "gulp-rename": "~1.2.0",
