--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "devDependencies": {
     "chai": "~1.9.0",
     "chai-as-promised": "~4.1.1",
+    "ghooks": "^0.2.2",
     "gulp": "~3.6.0",
     "gulp-coveralls": "^0.1.3",
+    "gulp-git": "~0.5.3",
     "gulp-rimraf": "~0.1.0",
     "gulp-load-plugins": "~0.5.0",
     "gulp-rename": "~1.2.0",
@@ -44,5 +46,10 @@
   "repository": {
     "type" : "git",
     "url" : "https://github.com/stellar/stellar-wallet-js-sdk"
+  },
+  "config": {
+    "ghooks": {
+      "pre-commit": "gulp hooks:precommit"
+    }
   }
 }
