--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "devDependencies": {
     "chai": "~1.9.0",
     "chai-as-promised": "~4.1.1",
+    "body-parser": "^1.9.2",
+    "express": "^4.9.8",
     "ghooks": "^0.2.2",
     "gulp": "~3.6.0",
     "gulp-coveralls": "^0.1.3",
@@ -35,7 +37,8 @@
     "notp": "^2.0.2",
     "opn": "~1.0.0",
     "run-sequence": "~0.3.6",
-    "webpack": "~1.4.4"
+    "webpack": "~1.4.4",
+    "zuul": "~1.14.0"
   },
   "engines": {
     "node": ">=0.10.0"
