--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: node_js
 node_js:
   - "0.10"
 script:
-  - zuul test/wallet.js
-  - npm run-script coverage
+  - zuul test/wallet.js && npm run-script coverage
 after_success:
   - gulp submit-coverage
