--- a/.zuul.yml
+++ b/.zuul.yml
@@ -4,8 +4,8 @@ scripts:
   - "./build/stellar-wallet.js"
 browsers:
   - name: chrome
-    version: latest
+    version: 37..latest
   - name: firefox
-    version: latest
+    version: 32..latest
   - name: ie
-    version: latest
+    version: 10..latest
