--- a/.zuul.yml
+++ b/.zuul.yml
@@ -1,11 +1,11 @@
 ui: mocha-bdd
 server: ./test/server.js
 scripts:
-  - "./build/stellar-wallet.js"
+  - "./build/stellar-wallet.min.js"
 browsers:
   - name: chrome
     version: 37..latest
   - name: firefox
     version: 32..latest
   - name: ie
-    version: 10..latest
+    version: 11..latest
